<resources>
    <string name="app_name">CookHub</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_email_address">Confirm Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="cookhub">CookHub</string>
    <string name="login">Login</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">CookHub User</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="latest_messages">Latest Messages</string>
    <string name="friends">Friends</string>
    <string name="pantry">Pantry</string>
    <string name="recipes">My Recipes</string>
    <string name="ingredients">My Ingredients</string>
    <string name="select_photo">Select Photo</string>
    <string name="sign_out">Sign Out</string>
    <string name="dialog_info">A green checkmark next to an ingredient indicates that you have this ingredient in your inventory and have enough to use in the recipe. An orange checkmark indicates that you have the ingredient in your inventory but do not have enough to make the recipe.</string>
    <string name="back">Back</string>
</resources>